<?xml version="1.0"?>
<package format="2">
  <name>nodelet_example</name>
  <version>0.0.0</version>
  <description>The nodelet_example package</description>

  <maintainer email="jiayu@todo.todo">jiayu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>CoreNode</build_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>CoreNode</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_example_plugins.xml" />
  </export>
</package>
